--- a/views/HrDataPage.ejs
+++ b/views/HrDataPage.ejs
@@ -168,137 +168,7 @@
   </head>
 
   <body class="bg-gray-100 text-gray-900 tracking-wider leading-normal">
-    <div class="relative">
-      <span
-        class="absolute text-white text-4xl top-5 left-4 cursor-pointer"
-        onclick="openSidebar()"
-      >
-        <i class="bi bi-filter-left px-2 bg-gray-900 rounded-md"></i>
-      </span>
-      <div
-        class="sidebar hidden lg:block fixed top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900 z-10"
-      >
-        <div class="text-gray-100 text-xl">
-          <div class="p-2.5 mt-1 flex items-center">
-            <div class="bg-white p-4">
-              <img
-                src="https://www.goalstreet.in/assets/LOG_GOAL-D2oMq8u7.png"
-              />
-            </div>
-            <i
-              class="bi bi-x cursor-pointer ml-28 lg:hidden"
-              onclick="openSidebar()"
-            ></i>
-          </div>
-          <div class="my-2 bg-gray-600 h-[1px]"></div>
-        </div>
-
-        <a
-          id="dashboardLink"
-          href="<%= `/dashboard?authtoken=${authToken}` %>"
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
-        >
-          <i class="bi bi-house-door-fill"></i>
-          <span class="text-[15px] ml-4 text-gray-200 font-bold"
-            >Form Data</span
-          >
-        </a>
-        <a
-          id="dashboardLinkOne"
-          href="<%= `/worktable?authtoken=${authToken}` %>"
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
-        >
-          <i class="bi bi-person-workspace"></i>
-          <span class="text-[15px] ml-4 text-gray-200 font-bold"
-            >Work Data</span
-          >
-        </a>
-        <a
-          id="dashboardLinkOne"
-          href="<%= `/hrFormPage?authtoken=${authToken}` %>"
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
-        >
-          <i class="bi bi-people-fill"></i>
-          <span class="text-[15px] ml-4 text-gray-200 font-bold">Hr Data</span>
-        </a>
-<a
-          id="dashboardLinkOne"
-          href="<%= `/collegeData?authtoken=${authToken}` %>"
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
-        >
-          <i class="bi bi-building"></i>
-          <span class="text-[15px] ml-4 text-gray-200 font-bold">College Data</span>
-        </a>
-        <a
-          id="dashboardLinkTwo"
-          href="<%= `/workdata/add?authtoken=${authToken}` %>"
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
-        >
-          <i class="bi bi-plus-circle-fill"></i>
-          <span class="text-[15px] ml-4 text-gray-200 font-bold">Add Work</span>
-        </a>
-        <div class="my-4 bg-gray-600 h-[1px]"></div>
-
-        <a
-          href="<%= `/logout?authtoken=${authToken}` %>"
-          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
-        >
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span class="text-[15px] ml-4 text-gray-200 font-bold">Logout</span>
-        </a>
-      </div>
-    </div>
-    <!--Container-->
-    <div class="container w-full md:w-4/5 xl:w-3/5 mx-auto px-2">
-      <!--Title-->
-      <!-- <h1 class="flex items-center font-sans font-bold break-normal text-indigo-500 px-2 py-8 text-xl md:text-2xl">
-			Responsive <a class="underline mx-2" href="https://datatables.net/">DataTables.net</a> Table
-		</h1> -->
-
-      <!--Card-->
-
-      <div id="recipients" class="p-8 mt-6 lg:mt-0 rounded shadow bg-white">
-        <table
-          id="example"
-          class="stripe hover"
-          style="width: 100%; padding-top: 1em; padding-bottom: 1em"
-        >
-          <thead>
-            <tr>
-              <th data-priority="1">Company</th>
-              <th data-priority="2">Name</th>
-              <th data-priority="3">Phone</th>
-              <th data-priority="4">Mail</th>
-              <th data-priority="5">Industry</th>
-              <th data-priority="6">Acess</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% formData.forEach(data => { %>
-            <tr class="my-2">
-              <td><%= data.hrName %></td>
-              <td><%= data.hrEmail %></td>
-              <td><%= data.hrNumber %></td>
-              <td><%= data.company %></td>
-              <td><%= data.industry %></td>
-
-              <td>
-                <div
-                  class="bg-blue-600 p-2 text-center text-white rounded cursor-pointer send-email-btn"
-                  data-user-id="<%= data._id %>"
-                >
-                  Send
-                </div>
-              </td>
-            </tr>
-            <% }) %>
-
-            <!-- Rest of your data (refer to https://datatables.net/examples/server_side/ for server side processing)-->
-          </tbody>
-        </table>
-      </div>
-      <!--/Card-->
-    </div>
+    <%- include('./components/siddebar') %>
 
     <!--/container-->
     <script>
